--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,9 @@ input[type="checkbox"] {
     margin-right: 10px;
 }
 
+input[type="checkbox"]:hover, .add-btn:hover {
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 700px) and(min-width: 400px) {
     .todo-filter-form {
@@ -42,12 +45,12 @@ input[type="checkbox"] {
     .todo-filter-search {
         display: flex;
     }
-    
+
     .todo-filter-search > form {
-        flex:1;
+        flex: 1;
     }
 
-    .todo-filter-search > ul{
-        flex:1;
+    .todo-filter-search > ul {
+        flex: 1;
     }
 }
